# kroniax3D

./: .clang-format  CMakeLists.txt  LICENSE
cmake/: addEngineDependencies.cmake  addFilesToTarget.cmake  addOpenGLDependencies.cmake  addUtilDependencies.cmake  buildDependencies.cmake  enableWarnings.cmake
cmake/emscripten/: enableEmscriptenMT.cmake  enableHTMLOutput.cmake
dependencies/: CMakeLists.txt
dependencies/cmake/: assimp.cmake  catch2.cmake  cereal.cmake  fmt.cmake  glm.cmake  sfml.cmake
examples/android/app/: build.gradle
examples/android/app/src/androidTest/java/com/example/awengineexample/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt
examples/android/app/src/main/java/com/example/awengineexample/: MainActivity.kt
examples/android/app/src/main/res/values/: strings.xml
examples/android/app/src/test/java/com/example/awengineexample/: ExampleUnitTest.kt
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/basic/: CMakeLists.txt  basicState.cpp  basicState.hpp  logApp.hpp  main.cpp
examples/basic/assets/levels/: level1.blend  level1.fbx  level2.fbx  level3.fbx
examples/basic/assets/meshes/: level1.blend  level1.blend1  missle.fbx  ship2.fbx
examples/basic/assets/shaders/: simple_fs.glsl  simple_vs.glsl
examples/basic/src/game/: CMakeLists.txt  missle.cpp  missle.hpp  networkHandler.cpp  networkHandler.hpp  physicsController.cpp  physicsController.hpp  ship.cpp  ship.hpp  shipController.cpp  shipController.hpp  shipController2.cpp  shipController2.hpp
examples/rocketwar/: CMakeLists.txt  buildAndRun.sh
examples/rocketwar/assets/levels/: level1.blend1  level1.mtl  level2.fbx  level3.blend
examples/rocketwar/assets/meshes/: cube.fbx  cube.mtl  cube2.mtl  ship.fbx
examples/rocketwar/src/game/: CMakeLists.txt  basicState.cpp  basicState.hpp  logApp.hpp  main.cpp  networkHandler.cpp  networkHandler.hpp  player.cpp  player.hpp  shipController.cpp
examples/rocketwar/src/server/: CMakeLists.txt  client.cpp  client.hpp  game.cpp  game.hpp  main.cpp  server.cpp  server.hpp
examples/rocketwar/src/shared/: CMakeLists.txt  gameMessages.cpp  gameMessages.hpp  missle.cpp  missle.hpp  packetSerializations.hpp  ship.cpp  ship.hpp  shipController.cpp  shipController.hpp
examples/rocketwar/src/shared/network/: channel.cpp  channel.hpp  client.cpp  client.hpp  connection.cpp  connection.hpp  connectionMetrics.hpp  conversion.hpp  host.cpp  host.hpp  incommingPacket.cpp  incommingPacket.hpp  outgoingPacket.cpp  outgoingPacket.hpp  packet.cpp  packet.hpp  protocol.cpp  protocol.hpp  types.hpp
examples/server/: CMakeLists.txt
examples/server/src/: CMakeLists.txt  main.cpp
include/aw/: config.hpp
include/aw/engine/: CMakeLists.txt  config.hpp  engine.hpp  log.hpp  logEngine.hpp  window.hpp  windowEvent.hpp
include/aw/engine/resources/: CMakeLists.txt  staticMesh.hpp
include/aw/engine/resources/loaders/: CMakeLists.txt  assimpLoader.hpp  ofbxLoader.hpp
include/aw/engine/stateMachine/: CMakeLists.txt  state.hpp  stateMachine.hpp
include/aw/engine/window/: CMakeLists.txt  event.hpp  eventSubscriber.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/aw/graphics/: CMakeLists.txt  log.hpp
include/aw/graphics/3d/: CMakeLists.txt  orbitCameraController.hpp
include/aw/graphics/core/: CMakeLists.txt  bindType.hpp  bufferObject.hpp  camera.hpp  image.hpp  material.hpp  pixelFormat.hpp  shaderProgram.hpp  shaderStage.hpp  texture2D.hpp  transform.hpp  usageType.hpp  vertex.hpp  vertexArrayObject.hpp  vertexAttribute.hpp  vertexLayout.hpp
include/aw/opengl/: CMakeLists.txt  opengl.hpp  types.hpp
include/aw/util/: CMakeLists.txt  color.hpp  colors.hpp  types.hpp
include/aw/util/containers/: CMakeLists.txt  ringBuffer.hpp
include/aw/util/file/: CMakeLists.txt  converters.hpp  inputStream.hpp  outputStream.hpp  path.hpp  pathRegistry.hpp
include/aw/util/log/: CMakeLists.txt  consoleSink.hpp  fileSink.hpp  level.hpp  log.hpp  logger.hpp  message.hpp  module.hpp  sink.hpp
include/aw/util/math/: constants.hpp  matrix.hpp  quat.hpp  vector.hpp
include/aw/util/message/: CMakeLists.txt  bus.hpp  channel.hpp  subscriber.hpp
include/aw/util/reflection/: CMakeLists.txt  reflection.hpp  typeDescriptor.hpp  typeDescriptorClass.hpp  typeDescriptorEnum.hpp  typeResolver.hpp
include/aw/util/reflection/operators/: CMakeLists.txt  toStream.hpp
include/aw/util/reflection/types/: CMakeLists.txt  primitiveTypes.hpp  string.hpp  vector.hpp
include/aw/util/serialization/: CMakeLists.txt  nameValuePair.hpp  serializeReflectedType.hpp
include/aw/util/time/: CMakeLists.txt  clock.hpp  stopWatch.hpp  time.hpp
include/aw/util/type/: CMakeLists.txt  bitwiseEnum.hpp  hash.hpp  staticForLoop.hpp  typeCounter.hpp
src/aw/engine/: CMakeLists.txt  config.cpp  engine.cpp  window.cpp
src/aw/engine/resources/: CMakeLists.txt  staticMesh.cpp
src/aw/engine/resources/loaders/: CMakeLists.txt  assimpLoader.cpp  ofbxLoader.cpp
src/aw/engine/stateMachine/: CMakeLists.txt  state.cpp  stateMachine.cpp
src/aw/engine/window/: CMakeLists.txt  window.cpp
src/aw/graphics/: CMakeLists.txt
src/aw/graphics/3d/: CMakeLists.txt  orbitCameraController.cpp
src/aw/graphics/core/: CMakeLists.txt  bufferObject.cpp  camera.cpp  image.cpp  material.cpp  shaderProgram.cpp  shaderStage.cpp  stb_image.hpp  texture2D.cpp  transform.cpp  vertexArrayObject.cpp
src/aw/opengl/: CMakeLists.txt  opengl.cpp
src/aw/opengl/impl/: opengl43.cpp
src/aw/util/: CMakeLists.txt  color.cpp
src/aw/util/file/: CMakeLists.txt  converters.cpp  inputStream.cpp  outputStream.cpp  path.cpp  pathRegistry.cpp
src/aw/util/log/: CMakeLists.txt  consoleSink.cpp  consoleSinkAndroidImpl.cpp  consoleSinkPrintImpl.cpp  fileSink.cpp  log.cpp  logger.cpp  module.cpp  sink.cpp
src/aw/util/time/: CMakeLists.txt  stopWatch.cpp
test/: CMakeLists.txt
test/util/containers/: testRingBuffer.cpp
test/util/file/: testInputOutput.cpp  testPath.cpp  testPathRegistry.cpp
test/util/message/: testBus.cpp
